# message-definitions

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  battery_test.cpp  docs.md  generate_sv_mavlink_bindings.sh  message-definitions.md  message.hpp  msg_defs.hpp  photo_and_battery_test.cpp  sv_mavlink_dialect.xml  usage.md
.github/workflows/: ci.yml
old/: docs.md
tests/: another_msg_defs_test.cpp  msg_defs_test.cpp
